--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: de-DE
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: Asia/Shanghai
+timezone: Europe/Berlin
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -192,8 +192,8 @@ compress_html:
   clippings: all
   comments: all
   endings: all
-  profile: false
-  blanklines: false
+  profile: true
+  blanklines: true
   ignore:
     envs: [development]
 
@@ -215,3 +215,31 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+plugins:
+  - jekyll-minifier
+
+jekyll-minifier:
+  preserve_php: true # Default: false
+  remove_spaces_inside_tags: true # Default: true
+  remove_multi_spaces: true # Default: true
+  remove_comments: true # Default: true
+  remove_intertag_spaces: true # Default: false
+  remove_quotes: false # Default: false
+  compress_css: true # Default: true
+  compress_javascript: true # Default: true
+  compress_json: true # Default: true
+  simple_doctype: false # Default: false
+  remove_script_attributes: false # Default: false
+  remove_style_attributes: false # Default: false
+  remove_link_attributes: false # Default: false
+  remove_form_attributes: false # Default: false
+  remove_input_attributes: false # Default: false
+  remove_javascript_protocol: false # Default: false
+  remove_http_protocol: false # Default: false
+  remove_https_protocol: false # Default: false
+  preserve_line_breaks: false # Default: false
+  simple_boolean_attributes: false # Default: false
+  compress_js_templates: false # Default: false
+  preserve_patterns: # Default: (empty)
+  uglifier_args: # Default: (empty)
