--- a/_config.yml
+++ b/_config.yml
@@ -159,6 +159,11 @@ collections:
   tabs:
     output: true
     sort_by: order
+  portfolio:
+    output: true
+    sort_by: order
+  policies:
+    output: true
 
 defaults:
   - scope:
